--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-async-errors": "^3.1.1",
+    "express-validator": "^7.1.0",
+    "mongodb": "^6.8.0",
     "mongoose": "^8.4.4",
     "mysql": "^2.18.1",
     "mysql2": "^3.10.2"
