--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -18,7 +19,6 @@
   },
   "homepage": "https://github.com/OrBitan7/Cyber-Attacks-SQL-Injection#readme",
   "dependencies": {
-    "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
@@ -26,7 +26,6 @@
     "express-validator": "^7.1.0",
     "mongodb": "^6.8.0",
     "mongoose": "^8.4.4",
-    "mysql": "^2.18.1",
     "mysql2": "^3.10.2"
   },
   "devDependencies": {
